[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/encyclopedia_menu.gd" id="1"]

[node name="EncyclopediaMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1")

[node name="FullscreenBackdrop" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.09, 0.12, 0.85)
mouse_filter = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="OuterMargin" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="CenterContainer" type="CenterContainer" parent="Panel/OuterMargin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="Panel/OuterMargin/CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(560, 0)
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="Panel/OuterMargin/CenterContainer/VBox"]
layout_mode = 2
text = "Encyclopedia"
horizontal_alignment = 1

[node name="Tabs" type="TabContainer" parent="Panel/OuterMargin/CenterContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 360)
current_tab = 0

[node name="CloseButton" type="Button" parent="Panel/OuterMargin/CenterContainer/VBox"]
layout_mode = 2
text = "Close"
